--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "create-express-ts-app",
+  "name": "ts-express-gen",
   "description": "CLI to scaffold Express + TypeScript projects",
   "author": "Anees Akbar",
   "license": "ISC",
@@ -11,7 +11,7 @@
     "createApp.js"
   ],
   "bin": {
-    "create-express-ts-app": "index.js"
+    "ts-express-gen": "index.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -24,9 +24,13 @@
     "inquirer": "^12.5.2"
   },
   "keywords": [
-    "cli",
     "express",
     "typescript",
-    "scaffold"
+    "scaffold",
+    "cli",
+    "generator",
+    "linter",
+    "prettier",
+    "husky"
   ]
 }
